# embedded-font-gen

./: AUTHORS  README.md  configure.ac
samples/: PT_Mono_55FT_32_12x36.c  PT_Mono_55FT_32_12x36.h  PT_Mono_55FT_32_12x36.txt
src/: Makefile.am  fontgen.c  fontgen.h  renderer-1bit.c  renderer-1bit.h  renderer-2bit.c  renderer-2bit.h  writer-ascii.c  writer-ascii.h  writer-c-raw.c  writer-c-raw.h
