# what flags you want to pass to the C compiler & linker
AM_CFLAGS = -Wall
AM_LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = fontgen
fontgen_SOURCES = fontgen.c fontgen.h renderer-1bit.c renderer-1bit.h renderer-2bit.c renderer-2bit.h writer-ascii.c writer-ascii.h writer-c-raw.c writer-c-raw.h
